[package]
name = "yt-dlts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["multipart", "json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

clipboard = "0.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
